# ndradex

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yml  test.yml
ndradex/: grid.py  radex.py
ndradexhyperfine/: db.py  grid.py  radex.py  utils.py
tests/: test_metadata.py  test_radex.py
