[metadata]
name = ndradexhyperfine
version = 0.2.4
author = astropenguin, thomaswilliamsastro
author_email = williams@mpia.de
url = https://github.com/thomaswilliamsastro/ndradex
description = Python package for RADEX grid calculation
long_description = file:README.md
long_description_content_type = text/markdown
keywords = radio-astronomy, python, radex, xarray
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = ndradexhyperfine
python_requires = >=3.6
include_package_data = True
install_requires =
    astropy >=4.0,<5.0
    astroquery >=0.4,<0.5
    netcdf4 >=1.5,<2.0
    numpy >=1.18,<2.0
    pandas >=0.25,<1.2
    toml >=0.10,<0.11
    tqdm >=4.41,<5.0
    xarray >=0.15,<0.16
