[metadata]
name = ndradexhyperfine
version = 0.2.6
author = astropenguin, thomaswilliamsastro
author_email = williams@mpia.de
url = https://github.com/thomaswilliamsastro/ndradex
description = Python package for RADEX grid calculation
long_description = file:README.md
long_description_content_type = text/markdown
keywords = radio-astronomy, python, radex, xarray
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = ndradexhyperfine
python_requires = >=3.10
include_package_data = True
install_requires =
    astropy
    astroquery
    netcdf4
    numpy
    pandas
    toml
    tqdm
    xarray
